--- a/client/src/styles/login-reg.css
+++ b/client/src/styles/login-reg.css
@@ -54,7 +54,7 @@
   margin: 0;
   font-size: 0.9rem;
 }
-.login-reg-btn {
+.login-reg-button {
   color: white;
   background-color: var(--purple);
   border: none;
@@ -66,7 +66,7 @@
   background-position: right bottom;
   transition: background-position 0.5s ease;
 }
-.login-reg-btn:hover {
+.login-reg-button:hover {
   background-position: left bottom;
 }
 
