--- a/client/src/styles/login-reg.css
+++ b/client/src/styles/login-reg.css
@@ -1,13 +1,10 @@
-.login-reg-page {
-  overflow: hidden;
-}
-.auction-logo-wrapper {
+.login-reg-auction-logo-wrapper {
   border-bottom: 1px solid black;
   text-align: center;
   max-height: 75px;
   overflow: hidden;
 }
-.auction-logo {
+.login-reg-auction-logo {
   height: 75px;
   transform: scale(2);
 }
