--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -6,6 +6,7 @@
   --purple: hsl(255, 60%, 60%);
   --darker-purple: hsl(255, 60%, 55%);
   --milk-color: hsl(0, 0%, 98%);
+  --shadow-gray: hsl(0, 0%, 80%);
 }
 
 body,
