--- a/client/src/styles/info-pages.css
+++ b/client/src/styles/info-pages.css
@@ -22,7 +22,6 @@
   gap: 2rem;
 }
 .about-us-section {
-  color: hsl(0, 0%, 40%);
   width: 500px;
   display: flex;
   flex-direction: column;
@@ -50,6 +49,9 @@
   grid-column: 2;
   grid-row: 2;
   width: 100%;
+}
+.pale-text {
+  color: hsl(0, 0%, 40%);
 }
 
 .not-found-page {
