1. Removed logout message 2. Improved error message feedback when user tries to sign up 3. Better password required for sign up purposes

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -55,6 +55,9 @@ button {
   gap: 0.5rem;
   font-size: larger;
 }
+.toast-box > p {
+  white-space: pre-line;
+}
 .toast-box.show {
   top: 30px;
 }
